fix: timetable clipped at 4pm

--- a/src/css/injected.scss
+++ b/src/css/injected.scss
@@ -1800,7 +1800,6 @@ ul {
 }
 .content > .wrapper .days tbody tr > td {
   overflow: hidden;
-  height: 1440px !important;
 }
 .title {
   color: var(--text-primary) !important;
